Fixed issue with slide images stretching

--- a/src/components/slide/slide.css
+++ b/src/components/slide/slide.css
@@ -13,6 +13,8 @@
 .slideImage {
 	height: 100%;
 	width: 100%;
+	max-width: 208px;
+	max-height: 132px;
 }
 
 .titleText {
